<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_interest"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.hood.thomashare.AddInterest">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="?android:attr/windowBackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:id="@+id/cardView">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/markInterest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvMark"
                        android:textSize="18sp"
                        android:textAlignment="center"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:textColor="@color/PrimaryText"
                        android:textStyle="normal|bold" />

                    <CheckBox
                        android:id="@+id/cbArchi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/cbHrm"
                        android:layout_below="@+id/cbHrm"
                        android:layout_marginLeft="@dimen/checkboxMarginLeft"
                        android:text="@string/archi"
                        android:textColor="@color/SecondaryText"
                        android:textSize="16sp"
                        app:buttonTint="@color/PrimaryColor"
                        tools:layout_editor_absoluteX="118dp"
                        tools:layout_editor_absoluteY="187dp" />

                    <CheckBox
                        android:id="@+id/cbAb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/cbArchi"
                        android:layout_below="@+id/cbArchi"
                        android:layout_marginLeft="@dimen/checkboxMarginLeft"
                        android:text="@string/ab"
                        android:textColor="@color/SecondaryText"
                        android:textSize="16sp"
                        app:buttonTint="@color/PrimaryColor"
                        tools:layout_editor_absoluteX="118dp"
                        tools:layout_editor_absoluteY="187dp" />

                    <CheckBox
                        android:id="@+id/cbEduc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/cbEng"
                        android:layout_below="@+id/cbEng"
                        android:layout_marginLeft="@dimen/checkboxMarginLeft"
                        android:text="@string/educ"
                        android:textColor="@color/SecondaryText"
                        android:textSize="16sp"
                        app:buttonTint="@color/PrimaryColor"
                        tools:layout_editor_absoluteX="118dp"
                        tools:layout_editor_absoluteY="187dp" />

                    <CheckBox
                        android:id="@+id/cbEng"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/cbMed"
                        android:layout_marginLeft="@dimen/checkboxMarginLeft"
                        android:text="@string/eng"
                        android:textColor="@color/SecondaryText"
                        android:textSize="16sp"
                        app:buttonTint="@color/PrimaryColor" />

                    <CheckBox
                        android:id="@+id/cbCfad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_below="@+id/checkBox17"
                        android:layout_marginLeft="@dimen/checkboxMarginLeft"
                        android:text="@string/cfad"
                        android:textColor="@color/SecondaryText"
                        android:textSize="16sp"
                        app:buttonTint="@color/PrimaryColor" />

                    <CheckBox
                        android:id="@+id/cbHrm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/cbEduc"
                        android:layout_below="@+id/cbEduc"
                        android:layout_marginLeft="@dimen/checkboxMarginLeft"
                        android:text="@string/hrm"
                        android:textColor="@color/SecondaryText"
                        android:textSize="16sp"
                        app:buttonTint="@color/PrimaryColor"
                        tools:layout_editor_absoluteX="118dp"
                        tools:layout_editor_absoluteY="187dp" />

                    <CheckBox
                        android:id="@+id/cbIT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/checkBox17"
                        android:layout_alignBottom="@+id/checkBox17"
                        android:layout_alignParentEnd="true"
                        android:layout_marginLeft="@dimen/checkboxMarginLeft"
                        android:text="@string/it"
                        android:textColor="@color/SecondaryText"
                        android:textSize="16sp"
                        app:buttonTint="@color/PrimaryColor" />

                    <CheckBox
                        android:id="@+id/cbLaw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/cbPhilo"
                        android:layout_below="@+id/cbPhilo"
                        android:layout_marginLeft="@dimen/checkboxMarginLeft"
                        android:text="@string/law"
                        android:textColor="@color/SecondaryText"
                        android:textSize="16sp"
                        app:buttonTint="@color/PrimaryColor"
                        tools:layout_editor_absoluteX="118dp"
                        tools:layout_editor_absoluteY="187dp" />

                    <CheckBox
                        android:id="@+id/cbMed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_below="@+id/cbCfad"
                        android:layout_marginLeft="@dimen/checkboxMarginLeft"
                        android:text="@string/med"
                        android:textColor="@color/SecondaryText"
                        android:textSize="16sp"
                        app:buttonTint="@color/PrimaryColor" />

                    <CheckBox
                        android:id="@+id/cbMusic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/cbLaw"
                        android:layout_below="@+id/cbLaw"
                        android:layout_marginLeft="@dimen/checkboxMarginLeft"
                        android:text="@string/music"
                        android:textColor="@color/SecondaryText"
                        android:textSize="16sp"
                        app:buttonTint="@color/PrimaryColor"
                        tools:layout_editor_absoluteX="118dp"
                        tools:layout_editor_absoluteY="187dp" />

                    <CheckBox
                        android:text="@string/philo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/cbPhilo"
                        tools:layout_editor_absoluteY="187dp"
                        tools:layout_editor_absoluteX="118dp"
                        app:buttonTint="@color/PrimaryColor"
                        android:layout_below="@+id/cbAb"
                        android:layout_alignStart="@+id/cbAb"
                        android:textColor="@color/SecondaryText"
                        android:textSize="16sp"
                        android:layout_marginLeft="@dimen/checkboxMarginLeft" />

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:text="@string/submit"
                            android:layout_height="wrap_content"
                            android:id="@+id/btnSubmit"
                            android:textColor="@android:color/white"
                            android:backgroundTint="@color/AccentColor"
                            android:elevation="5dp"
                            android:layout_width="150dp"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:textSize="16sp"
                            android:gravity="center_vertical|center_horizontal|center"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginBottom="@dimen/activity_vertical_margin" />
                    </android.support.constraint.ConstraintLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
