<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/PrimaryColor"
    tools:context="com.android.hood.thomashare.SignUp">

    <ProgressBar
        android:id="@+id/pb_signup"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="false"
        android:visibility="visible" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"
                app:layout_constraintHorizontal_bias="0.21">

                <TextView
                    android:id="@+id/tvSignup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/signUp"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/logo"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintHorizontal_bias="0.0" />

                <android.support.constraint.ConstraintLayout
                    android:layout_height="wrap_content"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:id="@+id/constraintLayout"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvSignup"
                    android:layout_width="0dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tilFirstname"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColorHint="@android:color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/tilLastname"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        android:layout_marginRight="8dp"
                        app:layout_constraintHorizontal_bias="0.0"
                        android:layout_marginEnd="8dp">

                        <EditText
                            android:id="@+id/etFirstname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/firstName"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:textColor="@android:color/white"
                            android:textColorHint="@android:color/white"
                            android:textColorLink="@android:color/white"
                            android:textSize="@dimen/labels" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tilLastname"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColorHint="@android:color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        app:layout_constraintLeft_toRightOf="@+id/tilFirstname">

                        <EditText
                            android:id="@+id/etLastname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/lastName"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:singleLine="true"
                            android:textColor="@android:color/white"
                            android:textColorHint="@android:color/white"
                            android:textColorLink="@android:color/white"
                            android:textSize="@dimen/labels" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.constraint.Guideline
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/guideline"
                        app:layout_constraintGuide_begin="20dp"
                        android:orientation="horizontal"
                        tools:layout_editor_absoluteY="64dp"
                        tools:layout_editor_absoluteX="16dp" />

                </android.support.constraint.ConstraintLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/tilPassword"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:textColorHint="@android:color/white"
                    android:id="@+id/tilConfirmPassword"
                    android:layout_width="0dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp">

                    <EditText
                        android:id="@+id/etConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirmPassword"
                        android:inputType="textPassword"
                        android:textColor="@color/White"
                        android:textSize="@dimen/labels" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:background="@color/AccentColor"
                    android:elevation="5dp"
                    android:paddingBottom="@dimen/btn_padding_lg"
                    android:paddingTop="@dimen/btn_padding_lg"
                    android:text="@string/register"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/labels"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilConfirmPassword" />


                <TextView
                    android:id="@+id/tvOr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/or"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textSmall"
                    android:visibility="invisible"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

                <android.support.design.widget.TextInputLayout
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/tilEmail"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:textColorHint="@android:color/white"
                    android:id="@+id/tilPassword"
                    android:layout_width="0dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp">

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/labels" />

                </android.support.design.widget.TextInputLayout>

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="8dp"
                    android:visibility="invisible"
                    app:buttonSize="wide"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvOr" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="14dp"
                    android:textColorHint="@android:color/white"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp">

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:textColor="@android:color/white"
                        android:textColorHighlight="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:textSize="@dimen/labels" />

                </android.support.design.widget.TextInputLayout>


            </android.support.constraint.ConstraintLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
